--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,10 +19,12 @@ jobs:
           node-version: '18' # Specify your desired Node.js version
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: Build project
-        run: npm run build
+        run: | 
+          npm ci
+          npm run build
 
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v2
+        uses: JamesIves/github-pages-deploy-action@v4\
+        with:
+          branch: main
+          folder: dist
