--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "tinymaps",
   "description": "Mapping library written in Typescript",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "MIT",
   "author": "Pieter van Mill",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pcmill/tinymaps"
+  },
   "entry": "src/index.ts",
   "main": "dist/tinymaps.umd.js",
   "types": "dist/main.d.ts",
